Amélioration de l'IHM et de l'internationalisation
Refactorisation des noms de variables pour une meilleure lisibilité.
Ajout de la gestion des ressources localisées avec `UiStrings.resx`.
Création de `UiStrings.Designer.cs` pour un accès typé aux chaînes.
Suppression des `using` inutilisés dans `ConfigTabControl.cs`.
Ajout de la méthode `LoadLabels` pour charger les textes des labels.
Amélioration de la structure du projet dans `WinFormsApp.csproj`.
Préparation de l'application pour la prise en charge multilingue.

--- a/WinFormsApp/WinFormsApp.csproj
+++ b/WinFormsApp/WinFormsApp.csproj
@@ -18,4 +18,22 @@
     <ProjectReference Include="..\Implementation\Implementation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="UiStrings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>UiStrings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="ConfigTabControl.resx">
+      <Generator></Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="UiStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UiStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
